# kapruka

./: .gitignore  README.md  Untitled  next.config.ts  package-lock.json  package.json  pipeline.py  tsconfig.json  vercel.json
app/: actions.ts  globals.css  layout.tsx  page.tsx
components/app/: AppInfoModal.tsx  AppShell.tsx  Header.tsx  LeftRail.tsx  MobileMenu.tsx  RukaApp.tsx
components/brand/: BrandMascot.tsx  ChatRukaLogo.tsx  RukaAvatar.tsx
components/cart/: CartDrawer.tsx
components/chat/: ChatCheckoutCard.tsx  ChatContext.tsx  ChatPanel.tsx  Composer.tsx  GiftFinderCard.tsx  Message.tsx  YouTubeCard.tsx
components/checkout/: CheckoutDrawer.tsx  CityAutocomplete.tsx  CitySuggestions.tsx  DeliveryForm.tsx
components/gift-message/: GiftMessageCard.tsx
components/landing/: Landing.tsx
components/onboarding/: OnboardingGate.tsx  ProfileSheet.tsx
components/products/: BrowseGrid.tsx  OccasionChips.tsx  ProductCard.tsx  ProductCarousel.tsx  ProductDetailOverlay.tsx  ProductDragOverlay.tsx  ProductTray.tsx
components/track/: TrackDrawer.tsx
components/ui/: Badge.tsx  Button.tsx  Drawer.tsx  SmartImage.tsx  (+2 more)
docs/: architecture.md  conversation-playbook.md  prompt-chat.json  prompt-voice.json
eval/: README.md  export-prompt.ts  grade.ts  logic-tests.ts  placeholders.ts  run.ts  scenarios.json  stubs.ts  system_prompt.txt  types.ts
lib/: i18n.ts  mongodb.ts  utils.ts
pipecat-server/: Dockerfile  README.md  bot.py  calendar_events.py  config.py  ice_config.py  language.py  nixpacks.toml  persona.py  pyproject.toml  requirements.txt
pipecat-server/pipeline/: language_sync.py  service.py
pipecat-server/services/: valsea.py
pipecat-server/tests/: test_language.py  test_persona.py  test_pipeline_settings.py  test_voice_eval.py
pipecat-server/tools/: mcp_tools.py  ruka_tools.py
prompt/: ecommerce.book.md  info1.md  principles.md
research/: competitive-landscape.md  mcp-findings.md
scripts/: harvest-catalog.mjs
voice/: README.md  bot.py  persona.py  requirements.txt  ruka_tools.py
(+89 files in other folders)
