[project]
name = "chatruka-pipecat"
version = "0.1.0"
description = "ChatRuka Pipecat voice server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[google,webrtc,runner,openai,cartesia,deepgram,elevenlabs]>=1.4.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
]

[tool.uv]
# uv will download Python 3.11+ automatically if pyenv/system python is too old.

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
