[project]
name = "chatruka-pipecat"
version = "0.1.0"
description = "ChatRuka Pipecat voice server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # [webrtc] extra is intentionally excluded — it drags in opencv-python which needs
    # libxcb/X11 libs absent on Railway/headless Linux. We add aiortc + headless directly.
    "pipecat-ai[google,runner,openai,cartesia,deepgram,elevenlabs]>=1.4.0",
    "aiortc>=1.9.0",
    "opencv-python-headless>=4.8.0,<5.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
]

[tool.uv]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
